@@ -10,12 +10,12 @@
 
     <!-- Compiler options -->
 
-    <property name="result.version.jar" value="2.8"/>
+    <property name="result.version.jar" value="2.10"/>
 
     <property name="compiler.debug" value="on"/>
     <property name="compiler.generate.no.warnings" value="off"/>
     <property name="compiler.args" value=""/>
-    <property name="compiler.max.memory" value="128m"/>
+    <property name="compiler.max.memory" value="1024m"/>
 
     <patternset id="ignored.files">
         <exclude name="**/CVS/**"/>
@@ -177,7 +177,8 @@
     <!-- Run GWT compiler for GWT module ${gwt.module.name} -->
     <target name="run.gwt.compiler.gwt" description="Run GWT compiler">
         <java fork="true" jvm="${module.jdk.bin.gwt}/java" classname="com.google.gwt.dev.Compiler">
-            <jvmarg line="-Xmx128m"/>
+            <jvmarg line="-Xmx512m"/>
+            <jvmarg line="-XX:+UseConcMarkSweepGC"/>
             <classpath>
                 <pathelement location="${gwt.sdk.home}/${gwt.sdk.dev.jar.name}"/>
                 <path refid="gwt.module.sourcepath"/>
